<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ayuda"
        android:orderInCategory="100"
        android:title="@string/action_ayuda"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_todos"
        android:orderInCategory="100"
        android:title="@string/action_todos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_no_iniciados"
        android:orderInCategory="100"
        android:title="@string/action_no_iniciados"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_iniciados"
        android:orderInCategory="100"
        android:title="@string/action_iniciados"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_terminados"
        android:orderInCategory="100"
        android:title="@string/action_terminados"
        app:showAsAction="never" />
</menu>
